[gd_scene load_steps=10 format=3 uid="uid://bwl5gqysmy2po"]

[ext_resource type="Script" uid="uid://bwpgdqfrgwc6" path="res://UI/TextBox/text_box.gd" id="1_l8vlr"]
[ext_resource type="Texture2D" uid="uid://nwrwwt5vwo1n" path="res://Assets/Custom/tile_0001.png" id="1_lpstn"]
[ext_resource type="Texture2D" uid="uid://cnr4qrhcxlor1" path="res://Assets/Custom/next_indicator.png" id="3_64vno"]
[ext_resource type="FontFile" uid="uid://bftmjwmvbmgcm" path="res://Assets/Fonts/Magedov_Military.ttf" id="4_c2geq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4q4uf"]
atlas = ExtResource("3_64vno")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cgfn"]
atlas = ExtResource("3_64vno")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrl53"]
atlas = ExtResource("3_64vno")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_icme8"]
atlas = ExtResource("3_64vno")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_yyljb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q4uf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cgfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrl53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icme8")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[node name="TextBox" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_l8vlr")

[node name="TextBox" type="MarginContainer" parent="."]
offset_right = 46.0
offset_bottom = 32.0

[node name="NinePatchRect" type="NinePatchRect" parent="TextBox"]
layout_mode = 2
texture = ExtResource("1_lpstn")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Control" type="Control" parent="TextBox/NinePatchRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="NextIndicator" type="AnimatedSprite2D" parent="TextBox/NinePatchRect/Control"]
visible = false
position = Vector2(-4, -4)
sprite_frames = SubResource("SpriteFrames_yyljb")
frame_progress = 0.625832

[node name="MarginContainer" type="MarginContainer" parent="TextBox"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="TextBox/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_c2geq")
theme_override_font_sizes/font_size = 18
vertical_alignment = 1

[node name="LetterDisplayTimer" type="Timer" parent="TextBox"]
one_shot = true

[connection signal="timeout" from="TextBox/LetterDisplayTimer" to="." method="_on_letter_display_timer_timeout"]
